--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
         background-color: rgb(209, 205, 205);
         border: none;
       }
+      form:invalid > #submit {
+        pointer-events: none !important;
+        cursor: not-allowed !important;
+        opacity: 0.7;
+        color: rgb(189, 186, 186);
+        background-color: rgb(209, 205, 205);
+        border: none;
+      }
     </style>
   </head>
 
@@ -58,6 +66,7 @@
                             placeholder="username"
                             type="text"
                             required
+                            minlength="2"
                             name="username"
                             class="
                               border-b-2
@@ -94,11 +103,11 @@
                         </div>
                         <div x-data="{emailField: '' }" class="relative">
                           <input
-                            x-data="{emailField: '' }"
                             x-model="email"
                             placeholder="Email address"
-                            type="text"
+                            type="email"
                             required
+                            pattern="/^[\w-\.]+@([\w-]+\.)+[\w-]{2,4}$/"
                             name="emailField"
                             class="
                               border-b-2
@@ -157,6 +166,7 @@
                           name="password"
                           x-model="password"
                           required
+                          minlength="8"
                           class="
                             z-50
                             border-b-2
@@ -230,13 +240,12 @@
                     <div class="container mt-12 pl-3 pr-4">
                       <div class="flex justify-center items-center">
                         <button
+                          id="submit"
                           type="submit"
-                          :disabled="!email || !password || !user"
                           @click="
                           credential.user=user
                           credential.email=email
                           credential.password=password
-                          location.href='./login.html'
                           "
                           class="
                             h-10
@@ -283,7 +292,7 @@
             <img
               x-cloak
               class="block h-12 opacity-40 cursor-pointer"
-              @click="open = true console.log('object :>> ');"
+              @click="open = true"
               src="./src/image/icon/login-square-arrow-button-outline.svg"
               alt="arrow"
             />
