first wheels on project

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <title>ALPINE VITE TAILWIND REGISTRATION FORM</title>
 
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
-    <script type="module" src="./src/main.js"></script>
+    <script defer type="module" src="./src/script/script.js"></script>
+    <script defer type="module" src="./src/main.js"></script>
     <style>
       [x-cloak] {
         display: none;
@@ -284,6 +285,5 @@
         </div>
       </div>
     </footer>
-    <script src="./src/script/script.js"></script>
   </body>
 </html>
