--- a/login.html
+++ b/login.html
@@ -10,7 +10,8 @@
     <title>ALPINE VITE TAILWIND LOGIN FORM</title>
 
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
-    <script type="module" src="./src/main.js"></script>
+    <script defer type="module" src="./src/script/script.js"></script>
+    <script defer type="module" src="./src/main.js"></script>
     <style>
       [x-cloak] {
         display: none !important;
@@ -56,7 +57,7 @@
                 <div>
                   <form class="mt-2" @submit.prevent="true">
                     <div class="mx-auto max-w-lg">
-                      <div class="" x-data="{ show: false }">
+                      <div x-data="{ show: false }">
                         <div class="relative">
                           <input
                             x-model="emailField"
@@ -301,6 +302,5 @@
         </div>
       </footer>
     </div>
-    <script src="./src/script/script.js"></script>
   </body>
 </html>
