--- a/login.html
+++ b/login.html
@@ -5,20 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="DESCRIPTION" />
+    <meta name="description" content="description" />
 
-    <title>ALPINE VITE TAILWIND LOGIN FORM</title>
+    <title>Alpine Vite Tailwind Login Form</title>
 
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
-    <script defer type="module" src="./src/script/script.js"></script>
-    <script defer type="module" src="./src/main.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
+    <script type="module" src="./src/main.js"></script>
     <style>
       [x-cloak] {
         display: none !important;
       }
       #title,
-      #foooter:first-letter {
+      #foooter {
         text-transform: capitalize;
+      }
+      .material-icons {
+        font-size: 40px;
       }
     </style>
   </head>
@@ -28,24 +34,60 @@
   >
     <div
       x-data="{credentials: JSON.parse(localStorage.getItem('_x_credential') || {} ) }"
-      class="container"
+      class="container flex justify-center align-center"
     >
       <div class="min-h-screen font-sans">
         <div class="max-w-sm mx-auto">
           <div class="relative flex flex-wrap">
             <div class="w-full relative">
               <div x-cloak class="">
+                <span class="material-icons"> person_outline </span>
+                <span
+                  class="material-icons h-12 w-auto text-gray-700 inline-block"
+                  >language</span
+                >
+                <span class="material-icons"> lock_open </span>
+                <span class="material-icons"> lock </span>
+                <span class="material-icons"> visibility </span>
+                <span class="material-icons"> error_outline </span>
+                <span class="material-icons"> input </span>
+
+                <span class="material-icons" style="color: green"> done </span>
+                <span class="material-icons" style="color: red"> close </span>
                 <div class="mt-20 flex justify-center">
-                  <img
-                    class="h-12 w-auto text-gray-700 inline-block"
-                    src="./src/image/icon/abler-logo.svg"
-                    alt="logo"
-                  />
+                  <svg
+                    class="h-24 w-auto text-gray-700 inline-block"
+                    version="1.0"
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="618.000000pt"
+                    height="441.000000pt"
+                    viewBox="0 0 618.000000 441.000000"
+                    preserveAspectRatio="xMidYMid meet"
+                  >
+                    <g
+                      transform="translate(0.000000,441.000000) scale(0.100000,-0.100000)"
+                      fill="#000000"
+                      stroke="none"
+                    >
+                      <path
+                        d="M1937 3804 l-987 -494 2 -509 3 -509 -35 18 c-237 121 -806 390 -817
+386 -11 -5 -13 -102 -11 -558 l3 -552 1575 -744 1574 -745 993 497 993 496 -2
+509 -3 509 35 -18 c237 -121 806 -390 817 -386 11 5 13 102 11 558 l-3 552
+-1570 743 c-863 408 -1574 742 -1580 742 -5 0 -454 -223 -998 -495z m2163
+-1149 c608 -296 1106 -538 1107 -539 3 -2 -1966 -913 -1984 -918 -6 -2 -515
+242 -1132 542 l-1121 545 38 18 c20 10 469 217 997 461 641 296 965 441 975
+436 8 -4 512 -249 1120 -545z"
+                      />
+                    </g>
+                  </svg>
                 </div>
+
                 <div
                   class="text-xl mt-16 pl-4 text-start font-semibold text-black"
                 >
-                  <p>
+                  <p
+                    x-text="!submitPassword || !submitEmail ? 'Welcome' : submitEmail!==credentials.email ? 'Oops!' : submitPassword!==credentials.password ? 'Wrong Password' : 'Welcome'"
+                  >
                     Welcome
                     <template
                       x-if="submitPassword===credentials.password && submitEmail===credentials.email "
@@ -266,8 +308,19 @@
           </div>
         </div>
       </div>
-
-      <footer x-cloak items-center class="bg-gray-200 bottom-0 w-full fixed">
+      <footer
+        x-cloak
+        items-center
+        class="
+          bg-gray-200
+          bottom-0
+          w-full
+          fixed
+          flex
+          justify-center
+          items-center
+        "
+      >
         <div
           class="container flex justify-between align-center items-center h-20"
         >
@@ -279,19 +332,19 @@
             />
           </div>
           <div class="mr-4 flex items-center cursor-pointer">
-            <template
-              x-if=" submitPassword===credentials.password && submitEmail===credentials.email "
-            >
-              <span
-                id="foooter"
-                class="text-base opacity-40 pr-4"
-                x-text="credentials.user"
-              ></span>
-            </template>
-            <template x-if="credentials.email !== submitEmail">
-              <span class="text-base opacity-40 pr-4">New user</span>
-            </template>
-            <a href="./index.html">
+            <a href="./registration.html">
+              <template
+                x-if=" submitPassword===credentials.password && submitEmail===credentials.email "
+              >
+                <span
+                  id="foooter"
+                  class="text-base opacity-40 pr-4"
+                  x-text="credentials.user"
+                ></span>
+              </template>
+              <template x-if="credentials.email !== submitEmail">
+                <span class="text-base opacity-40 pr-4">New user</span>
+              </template>
               <img
                 class="h-12 opacity-40"
                 src="./src/image/icon/login-square-arrow-button-outline.svg"
