--- a/registration.html
+++ b/registration.html
@@ -10,10 +10,6 @@
     <title>Alpine Vite Tailwind Registration Form</title>
 
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-    />
     <script type="module" src="./src/main.js"></script>
     <style>
       [x-cloak] {
@@ -29,13 +25,7 @@
           <div class="w-full relative">
             <div class="">
               <div class="mt-20 flex justify-center">
-                <span class="material-icons-outlined">language</span>
-                <!-- <img
-                  x-cloak
-                  class="h-12 w-auto text-gray-700 inline-block"
-                  src="./src/image/icon/abler-logo.svg"
-                  alt="logo"
-                /> -->
+                <icon src="./src/image/icon/abler-logo.svg" class="icon"></icon>
               </div>
               <div
                 class="text-xl mt-16 pl-4 text-start font-semibold text-black"
