--- a/registration.html
+++ b/registration.html
@@ -25,7 +25,7 @@
           <div class="w-full relative">
             <div class="">
               <div class="mt-20 flex justify-center">
-                <icon src="./src/image/icon/abler-logo.svg" class="icon"></icon>
+                <icon src="abler-logo.svg" class="icon"></icon>
               </div>
               <div
                 class="text-xl mt-16 pl-4 text-start font-semibold text-black"
