--- a/registration.html
+++ b/registration.html
@@ -379,18 +379,20 @@
           "
         >
           <div class="ml-4 h-13 rounded-full bg-white w-13">
-            <span
-              class="
-                material-icons
-                w-auto
-                text-gray-700
-                block
-                p-2
-                opacity-40
-                text-5xl
-              "
-              >language</span
-            >
+            <a href="./index.html">
+              <span
+                class="
+                  material-icons
+                  w-auto
+                  text-gray-700
+                  block
+                  p-2
+                  opacity-40
+                  text-5xl
+                "
+                >language</span
+              >
+            </a>
           </div>
           <a href="./login.html">
             <div class="mr-4 flex items-center cursor-pointer">
