--- a/index.html
+++ b/index.html
@@ -22,272 +22,80 @@
     </style>
   </head>
 
-  <body>
-    <div class="min-h-screen font-sans">
-      <div class="max-w-sm mx-auto">
-        <div class="relative flex flex-wrap">
-          <div class="w-full relative">
-            <div class="">
-              <div class="mt-20 flex justify-center">
-                <span class="material-icons-outlined">language</span>
-                <!-- <img
-                  x-cloak
-                  class="h-12 w-auto text-gray-700 inline-block"
-                  src="./src/image/icon/abler-logo.svg"
-                  alt="logo"
-                /> -->
-              </div>
-              <div
-                class="text-xl mt-16 pl-4 text-start font-semibold text-black"
-              >
-                Registration
-              </div>
-              <div
-                x-data="{ credential: $persist({email:'0000000000000000', password:'', user:''}) }"
-              >
-                <form x-cloak class="my-48" action="./login.html">
-                  <div x-data="userCred" class="mx-auto max-w-lg">
-                    <div class="">
-                      <div class="">
-                        <div class="relative">
-                          <input
-                            x-model="user"
-                            placeholder="username"
-                            type="text"
-                            required
-                            minlength="2"
-                            name="username"
-                            class="
-                              border-b-2
-                              text-md
-                              px-12
-                              py-6
-                              w-full
-                              bg-white
-                              border-gray-200
-                              placeholder-gray-400
-                              focus:placeholder-gray-500
-                              focus:bg-white
-                              focus:border-gray-600
-                              focus:outline-none
-                            "
-                          />
-                          <div
-                            class="
-                              absolute
-                              inset-y-0
-                              pl-3
-                              flex
-                              items-center
-                              text-sm
-                              leading-5
-                            "
-                          >
-                            <img
-                              class="h-8 w-auto text-gray-700 opacity-50"
-                              src="./src/image/icon/person.svg"
-                              alt="user"
-                            />
-                          </div>
-                        </div>
-                        <div class="relative">
-                          <input
-                            x-model="email"
-                            placeholder="Email address"
-                            type="email"
-                            required
-                            pattern="/^[\w-\.]+@([\w-]+\.)+[\w-]{2,4}$/"
-                            name="emailField"
-                            class="
-                              border-b-2
-                              text-md
-                              px-12
-                              py-6
-                              w-full
-                              bg-white
-                              border-gray-200
-                              placeholder-gray-400
-                              focus:placeholder-gray-500
-                              focus:bg-white
-                              focus:border-gray-600
-                              focus:outline-none
-                            "
-                          />
-                          <div
-                            class="
-                              absolute
-                              inset-y-0
-                              pl-3
-                              flex
-                              items-center
-                              text-sm
-                              leading-5
-                            "
-                          >
-                            <img
-                              class="h-8 w-auto text-gray-700 opacity-50"
-                              src="./src/image/icon/email.svg"
-                              alt="email"
-                            />
-                          </div>
-                        </div>
-                        <div
-                          class="
-                            absolute
-                            inset-y-0
-                            right-0
-                            pr-8
-                            flex
-                            items-center
-                            text-sm
-                            leading-5
-                            cursor-pointer
-                          "
-                        ></div>
-                      </div>
-                    </div>
-
-                    <div class="" x-data="{ show: true }">
-                      <div class="relative">
-                        <input
-                          x-model="password"
-                          :type="show ? 'password' : 'text'"
-                          name="password"
-                          placeholder="Password"
-                          required
-                          minlength="8"
-                          class="
-                            z-50
-                            border-b-2
-                            text-md
-                            px-12
-                            py-6
-                            w-full
-                            bg-white
-                            border-gray-200
-                            placeholder-gray-400
-                            focus:placeholder-gray-500
-                            focus:bg-white
-                            focus:border-gray-600
-                            focus:outline-none
-                          "
-                        />
-                        <div
-                          class="
-                            absolute
-                            inset-y-0
-                            top-4
-                            pl-3
-                            items-center
-                            text-sm
-                            leading-5
-                          "
-                        >
-                          <img
-                            class="h-8 w-auto text-gray-400 opacity-50"
-                            :class="{'hidden': !show, 'block':show }"
-                            src="./src/image/icon/lock.svg"
-                            alt="padlock"
-                          />
-                          <img
-                            class="h-8 w-auto text-gray-400"
-                            :class="{'block': !show, 'hidden':show }"
-                            src="./src/image/icon/unlock.svg"
-                            alt="padlock unlock"
-                          />
-                        </div>
-                        <div
-                          class="
-                            absolute
-                            inset-y-0
-                            right-0
-                            pr-8
-                            flex
-                            items-center
-                            text-sm
-                            leading-5
-                            cursor-pointer
-                          "
-                        >
-                          <img
-                            class="h-8 text-gray-700 opacity-50"
-                            @click="show = !show"
-                            :class="{'hidden': !show, 'block':show }"
-                            src="./src/image/icon/eye.svg"
-                            alt="eye"
-                          />
-                          <img
-                            class="h-8 text-gray-700"
-                            @click="show = !show"
-                            :class="{'block': !show, 'hidden':show }"
-                            src="./src/image/icon/eye.svg"
-                            alt="eye"
-                          />
-                        </div>
-                      </div>
-                    </div>
-                    <div class="container mt-12 pl-3 pr-4">
-                      <div class="flex justify-center items-center">
-                        <button
-                          id="submit"
-                          type="submit"
-                          @click="
-                          credential.user=user
-                          credential.email=email
-                          credential.password=password
-                          "
-                          class="
-                            h-10
-                            px-5
-                            m-2
-                            text-gray-400
-                            transition-colors
-                            duration-150
-                            border-2 border-gray-400
-                            focus:shadow-outline
-                            rounded-full
-                            block
-                            hover:text-white
-                            hover:bg-green-400
-                            hover:border-none
-                          "
-                        >
-                          Register
-                        </button>
-                      </div>
-                    </div>
-                  </div>
-                </form>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <footer items-center class="bg-gray-200 w-full bottom-0 fixed">
-      <div
-        class="container flex justify-between align-center items-center h-20"
+  <body
+    x-data="{open:false, credentials: JSON.parse(localStorage.getItem('_x_credential') || {} ) }"
+  >
+    <div class="flex flex-col min-h-screen">
+      <header class="my-12 flex justify-center">
+        <icon
+          src="abler-logo.svg"
+          class="icon h-12 sm:h-20 w-auto text-gray-700 inline-block"
+        ></icon>
+      </header>
+      <main class="flex-grow my-2 mx-auto max-w-lg lg:max-w-xl">
+        <p class="text-2xl font-semibold text-center block mb-4">Welcome</p>
+        <template x-if="credentials.email">
+          <span class="text-xl" x-text="credentials.user"> </span>
+        </template>
+        <template x-if="credentials.email == '0000000000000000'">
+          <a href="./registration.html">
+            <span class="text-xl text-green-800 italic font-semibold"
+              >Buddy, click Here to Fill Registration Form, please
+            </span></a
+          >
+        </template>
+      </main>
+      <footer
+        items-center
+        class="
+          bg-gray-200
+          bottom-0
+          max-w-full
+          mx-auto
+          w-full
+          flex
+          justify-center
+          items-center
+        "
       >
-        <div x-cloak class="block ml-4 h-12 rounded-full bg-white w-12">
-          <img
-            class="p-2 opacity-40"
-            src="./src/image/icon/globe.svg"
-            alt="globe"
-          />
-        </div>
-        <div class="mr-4 flex items-center">
-          <span class="text-base opacity-40 pr-4">Login Form</span>
+        <div
+          class="
+            container
+            max-w-lg
+            lg:max-w-xl
+            mx-auto
+            flex
+            justify-between
+            align-center
+            items-center
+            h-20
+          "
+        >
+          <div class="ml-4 h-13 rounded-full bg-white w-13">
+            <a href="./index.html">
+              <span
+                class="
+                  material-icons
+                  w-auto
+                  text-gray-700
+                  block
+                  p-2
+                  opacity-40
+                  text-5xl
+                "
+                >language</span
+              >
+            </a>
+          </div>
+
           <a href="./login.html">
-            <img
-              x-cloak
-              class="block h-10 opacity-40 cursor-pointer"
-              @click="open = true"
-              src="./src/image/icon/login-square-arrow-button-outline.svg"
-              alt="arrow"
-            />
+            <div class="mr-4 flex items-center cursor-pointer">
+              <span class="text-base opacity-40 pr-4">Login Form</span>
+              <span class="material-icons opacity-40 text-5xl"> input </span>
+            </div>
           </a>
         </div>
-      </div>
-    </footer>
+      </footer>
+    </div>
   </body>
 </html>
