--- a/registration.html
+++ b/registration.html
@@ -44,7 +44,7 @@
             x-ref="form"
             x-init="$watch()"
             @submit.prevent="true"
-            x-data="{diz:disableUnDisable()}"
+            x-data="{diz:true}"
             class="my-2 mx-auto max-w-lg lg:max-w-xl"
             method="post"
           >
@@ -76,6 +76,8 @@
                     "
                     @focus="open = true"
                     @blur="open = false"
+                    @keyup="
+                    checkValidInput()"
                   />
                   <div class="absolute inset-y-0 pl-6 flex items-center">
                     <span
@@ -109,6 +111,8 @@
                     "
                     @focus="open = true"
                     @blur="open = false"
+                    @keyup="
+                    checkValidInput()"
                   />
                   <div
                     class="
@@ -173,6 +177,9 @@
                     "
                     @focus="open = true"
                     @blur="open = false"
+                    @keyup="
+                    checkValidInput()            
+                                  "
                   />
                   <!-- x-on:invalid="password == password_confirm && password.length > 0 &&   " -->
                   <div class="absolute inset-y-0 top-4 pl-6 items-center">
@@ -253,7 +260,7 @@
                     @focus="open = true"
                     @blur="open = false"
                     @keyup="
-      checkConfirmPassword(password, password_confirm)            
+                    checkValidInput(password, password_confirm)            
                     "
                     :class="invalid ? 'bg-gray-600' : 'bg-white'"
                   />
